Update images and style

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Mi Blog de Desarrollo (C# y Patrones)</title>
+    <title>Mi Blog de Desarrollo (C# y Mas)</title>
     <meta name="description" content="Un blog personal sobre desarrollo de software, C#, patrones de diseño y buenas prácticas.">
 
     <link rel="stylesheet" href="style.css">
@@ -13,8 +13,8 @@
 
     <header class="site-header">
         <div class="header-content">
-            <h1>Mi Blog de Desarrollo</h1>
-            <p class="subtitle">Tutoriales y Guías sobre C#, .NET y Patrones de Diseño</p>
+            <h1>magolo .NET</h1>
+            <p class="subtitle">Tutoriales y guías sobre C#, .NET, Cloud, IA y mucho mas</p>
         </div>
     </header>
 
